<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">



    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPurpleButton">

        <TextView
            android:id="@+id/tvRLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:layout_gravity="end">

        </TextView>



    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="working_together.json"
        app:lottie_loop="false" />
    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="8dp"
        android:text="@string/registration"
        android:layout_centerInParent="true"
        android:textColor="@color/blueBackground"
        android:layout_below="@+id/lottieAnimationView"
        android:textSize="18sp">
    </TextView>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegistration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Email"
                android:textColor="@color/blueBackground" />

            <EditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterPhone"
                android:inputType="phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <EditText
                android:id="@+id/etGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterGroup"/>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPurpleButton"
                android:text="@string/save"
                android:textColor="@color/colorWhite">

            </Button>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>