<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUser"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/colorPurpleComplement2">

        <LinearLayout
            android:id="@+id/llMain1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person"
                app:tint="@color/colorWhite">
            </ImageView>
            <TextView
                android:id="@+id/tvAdmin"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:text="Admin">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:text="@string/userEmail">
            </TextView>
            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:textSize="16dp"
                android:text="userEmail">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:text="@string/userName">
            </TextView>
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:textSize="16dp"
                android:text="userName">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:text="@string/userPhone">
            </TextView>
            <TextView
                android:id="@+id/userPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="24dp"
                android:textSize="16dp"
                android:text="userPhone">
            </TextView>

            <ImageButton
                android:id="@+id/btnDeleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginBottom="12dp"
                android:visibility="invisible"
                android:src="@drawable/ic_delete" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>